--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.liorattun.swaiterbeta">
 
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-feature
@@ -23,7 +23,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.liorattun.swaiterbeta.Main">
+        <activity android:name=".Credits"></activity>
+        <activity android:name=".Main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,19 +32,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.liorattun.swaiterbeta.OrdersList"
+            android:name=".OrdersList"
             android:banner="@drawable/app_icon_your_company"
             android:icon="@drawable/app_icon_your_company"
             android:label="@string/title_activity_orders_list"
             android:logo="@drawable/app_icon_your_company"
             android:screenOrientation="landscape" />
-        <activity android:name="com.example.liorattun.swaiterbeta.DetailsActivity" />
-        <activity android:name="com.example.liorattun.swaiterbeta.PlaybackActivity" />
-        <activity android:name="com.example.liorattun.swaiterbeta.BrowseErrorActivity" />
-        <activity android:name="com.example.liorattun.swaiterbeta.NewDish" />
-        <activity android:name="com.example.liorattun.swaiterbeta.Edit" />
-        <activity android:name="com.example.liorattun.swaiterbeta.Menu" />
-        <activity android:name="com.example.liorattun.swaiterbeta.Orders" />
+        <activity android:name=".DetailsActivity" />
+        <activity android:name=".PlaybackActivity" />
+        <activity android:name=".BrowseErrorActivity" />
+        <activity android:name=".NewDish" />
+        <activity android:name=".Edit" />
+        <activity android:name=".Menu" />
+        <activity android:name=".Orders" />
     </application>
 
 </manifest>
